homework 4 added pseudo elements, animation, shadows

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,18 +30,18 @@
           <a href="./index.html" class="logo link"
             >Web<span class="logo-accent">Studio</span></a
           >
-          <ul class="list header-wrapper">
+          <ul class="list header-flex-wrapper">
             <li class="menu-item">
               <a class="link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a class="link" href="./portfolio.html">Portfolio</a>
+              <a class="link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu-item"><a class="link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="address-data">
-          <ul class="list header-wrapper">
+          <ul class="list header-flex-wrapper">
             <li class="contact-data">
               <a class="link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -80,11 +80,19 @@
           <ul class="list portfolio-cards">
             <li class="portfolio-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/app.jpg"
-                  alt="Application view"
-                  width="360"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/portfolio/app.jpg"
+                    alt="Application view"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-card-text">
                   <h2 class="portfolio-header">
                     Banking App Interface Concept
@@ -95,11 +103,19 @@
             </li>
             <li class="portfolio-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/qr.jpg"
-                  alt="Phone scanning QR code"
-                  width="360"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/portfolio/qr.jpg"
+                    alt="Phone scanning QR code"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-card-text">
                   <h2 class="portfolio-header">Cashless Payment</h2>
                   <p class="portfolio-descr">Marketing</p>
@@ -108,11 +124,19 @@
             </li>
             <li class="portfolio-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/laptop.jpg"
-                  alt="Laptop"
-                  width="360"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/portfolio/laptop.jpg"
+                    alt="Laptop"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-card-text">
                   <h2 class="portfolio-header">Meditation App</h2>
                   <p class="portfolio-descr">App</p>
@@ -121,11 +145,19 @@
             </li>
             <li class="portfolio-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/car.jpg"
-                  alt="Wheeldrive"
-                  width="360"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/portfolio/car.jpg"
+                    alt="Wheeldrive"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-card-text">
                   <h2 class="portfolio-header">Taxi Service</h2>
                   <p class="portfolio-descr">Marketing</p>
@@ -134,11 +166,19 @@
             </li>
             <li class="portfolio-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/screensaver.jpg"
-                  alt="Phone screen illustrations"
-                  width="360"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/portfolio/screensaver.jpg"
+                    alt="Phone screen illustrations"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-card-text">
                   <h2 class="portfolio-header">Screen Illustrations</h2>
                   <p class="portfolio-descr">Design</p>
@@ -147,11 +187,19 @@
             </li>
             <li class="portfolio-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/user.jpg"
-                  alt="Young lady looking on phone"
-                  width="360"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/portfolio/user.jpg"
+                    alt="Young lady looking on phone"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-card-text">
                   <h2 class="portfolio-header">Online Courses</h2>
                   <p class="portfolio-descr">Marketing</p>
@@ -160,11 +208,19 @@
             </li>
             <li class="portfolio-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/layout.jpg"
-                  alt="Differend view of layout"
-                  width="360"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/portfolio/layout.jpg"
+                    alt="Differend view of layout"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-card-text">
                   <h2 class="portfolio-header">Instagram Stories Concept</h2>
                   <p class="portfolio-descr">Design</p>
@@ -173,11 +229,19 @@
             </li>
             <li class="portfolio-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/shopper.jpg"
-                  alt="Shoping bag with vegitables"
-                  width="360"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/portfolio/shopper.jpg"
+                    alt="Shoping bag with vegitables"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-card-text">
                   <h2 class="portfolio-header">Organic Food</h2>
                   <p class="portfolio-descr">Web Site</p>
@@ -186,11 +250,19 @@
             </li>
             <li class="portfolio-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/coffee.jpg"
-                  alt="Cup of coffe"
-                  width="360"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/portfolio/coffee.jpg"
+                    alt="Cup of coffe"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="portfolio-card-text">
                   <h2 class="portfolio-header">Fresh Coffee</h2>
                   <p class="portfolio-descr">Web Site</p>
@@ -204,13 +276,50 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a href="./index.html" class="logo link">
-          Web<span class="footer-logo">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <ul class="list footer-list">
+          <li class="footer-list-item">
+            <a href="./index.html" class="logo link">
+              Web<span class="footer-logo">Studio</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </li>
+          <li class="footer-list-item">
+            <h3 class="footer-header-text">Social media</h3>
+            <ul class="list footer-links-wrapper">
+              <li class="social-item">
+                <a class="social-link-footer" href="">
+                  <svg width="24" height="24" aria-label="Instagram icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link-footer" href="">
+                  <svg width="24" height="24" aria-label="Twitter icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link-footer" href="">
+                  <svg width="24" height="24" aria-label="Facebook icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link-footer" href="">
+                  <svg width="24" height="24" aria-label="Linkedin icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
