--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           <a href="./index.html" class="logo link"
             >Web<span class="logo-accent">Studio</span></a
           >
-          <ul class="list header-wrapper">
+          <ul class="list header-flex-wrapper">
             <li class="menu-item">
-              <a class="link" href="./index.html">Studio</a>
+              <a class="link current" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
               <a class="link" href="./portfolio.html">Portfolio</a>
@@ -41,7 +41,7 @@
           </ul>
         </nav>
         <address class="address-data">
-          <ul class="list header-wrapper">
+          <ul class="list header-flex-wrapper">
             <li class="contact-data">
               <a class="link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -59,7 +59,9 @@
       <section class="hero-screen">
         <div class="container">
           <h1 class="hero-header">Effective Solutions for Your Business</h1>
-          <button class="cta" type="button">Order Service</button>
+          <button class="cta" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -68,6 +70,16 @@
           <h2 class="visually-hidden">About us</h2>
           <ul class="list list-wrapper">
             <li class="list-item">
+              <div class="icon-wrapper">
+                <svg
+                  class="icon-block"
+                  width="64"
+                  height="64"
+                  aria-label="Satelite icon"
+                >
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="block-header">Strategy</h3>
               <p class="block-descr">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +87,16 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="icon-wrapper">
+                <svg
+                  class="icon-block"
+                  width="64"
+                  height="64"
+                  aria-label="Clock icon"
+                >
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="block-header">Punctuality</h3>
               <p class="block-descr">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +104,16 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="icon-wrapper">
+                <svg
+                  class="icon-block"
+                  width="64"
+                  height="64"
+                  aria-label="Icon with laptop and diagram"
+                >
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="block-header">Diligence</h3>
               <p class="block-descr">
                 Research and confirm brands that present the strongest digital
@@ -89,6 +121,16 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="icon-wrapper">
+                <svg
+                  class="icon-block"
+                  width="64"
+                  height="64"
+                  aria-label="Icon with astronaut and stars"
+                >
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="block-header">Technologies</h3>
               <p class="block-descr">
                 Design practice focused on digital experiences. We bring forth a
@@ -120,7 +162,7 @@
         </div>
       </section>
 
-      <section class="team-section section-wrapper">
+      <section class="section-wrapper team-section">
         <div class="container">
           <h2 class="section-header">Our Team</h2>
           <ul class="list list-wrapper">
@@ -129,11 +171,40 @@
                 src="./images/team/guerrero.jpg"
                 alt="Mark Guerrero product designer"
                 width="264"
-                height="260"
               />
               <div class="card-text">
                 <h3 class="block-header">Mark Guerrero</h3>
                 <p class="block-descr">Product Designer</p>
+                <ul class="list social-links-wrapper">
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Instagram icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Twitter icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Facebook icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Linkedin icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -141,11 +212,40 @@
                 src="./images/team/ford.jpg"
                 alt="Tom Ford frontend developer"
                 width="264"
-                height="260"
               />
               <div class="card-text">
                 <h3 class="block-header">Tom Ford</h3>
                 <p class="block-descr">Frontend Developer</p>
+                <ul class="list social-links-wrapper">
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Instagram icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Twitter icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Facebook icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Linkedin icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -153,11 +253,40 @@
                 src="./images/team/garcia.jpg"
                 alt="Camila Garcia marketing"
                 width="264"
-                height="260"
               />
               <div class="card-text">
                 <h3 class="block-header">Camila Garcia</h3>
                 <p class="block-descr">Marketing</p>
+                <ul class="list social-links-wrapper">
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Instagram icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Twitter icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Facebook icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Linkedin icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -165,12 +294,120 @@
                 src="./images/team/wilson.jpg"
                 alt="Daniel Wilson UI designer"
                 width="264"
-                height="260"
               />
               <div class="card-text">
                 <h3 class="block-header">Daniel Wilson</h3>
                 <p class="block-descr">UI Designer</p>
+                <ul class="list social-links-wrapper">
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Instagram icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Twitter icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Facebook icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link" href="">
+                      <svg width="16" height="16" aria-label="Linkedin icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section-wrapper">
+        <div class="container">
+          <h2 class="section-header">Customers</h2>
+          <ul class="list customers-list-wrapper">
+            <li class="customers-list-item">
+              <a href="" class="customer-link-item">
+                <svg
+                  class="customers-icon"
+                  width="104"
+                  height="56"
+                  aria-label="company logo"
+                >
+                  <use href="/images/icons.svg#icon-customer-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customer-link-item">
+                <svg
+                  class="customers-icon"
+                  width="104"
+                  height="56"
+                  aria-label="company logo"
+                >
+                  <use href="/images/icons.svg#icon-customer-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customer-link-item"
+                ><svg
+                  class="customers-icon"
+                  width="104"
+                  height="56"
+                  aria-label="company logo"
+                >
+                  <use href="/images/icons.svg#icon-customer-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customer-link-item">
+                <svg
+                  class="customers-icon"
+                  width="104"
+                  height="56"
+                  aria-label="company logo"
+                >
+                  <use href="/images/icons.svg#icon-customer-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customer-link-item">
+                <svg
+                  class="customers-icon"
+                  width="104"
+                  height="56"
+                  aria-label="company logo"
+                >
+                  <use href="/images/icons.svg#icon-customer-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customer-link-item">
+                <svg
+                  class="customers-icon"
+                  width="104"
+                  height="56"
+                  aria-label="company logo"
+                >
+                  <use href="/images/icons.svg#icon-customer-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -179,14 +416,68 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a href="./index.html" class="logo link">
-          Web<span class="footer-logo">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <ul class="list footer-list">
+          <li class="footer-list-item">
+            <a href="./index.html" class="logo link">
+              Web<span class="footer-logo">Studio</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </li>
+          <li class="footer-list-item">
+            <h3 class="footer-header-text">Social media</h3>
+            <ul class="list footer-links-wrapper">
+              <li class="social-item">
+                <a class="social-link-footer" href="">
+                  <svg width="24" height="24" aria-label="Instagram icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link-footer" href="">
+                  <svg width="24" height="24" aria-label="Twitter icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link-footer" href="">
+                  <svg width="24" height="24" aria-label="Facebook icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link-footer" href="">
+                  <svg width="24" height="24" aria-label="Linkedin icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="close-btn" data-modal-close>
+          <svg
+            class="icon-close"
+            width="8"
+            height="8"
+            aria-label="Modal window close icon"
+          >
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
