--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                   height="56"
                   aria-label="company logo"
                 >
-                  <use href="/images/icons.svg#icon-customer-1"></use>
+                  <use href="./images/icons.svg#icon-customer-1"></use>
                 </svg>
               </a>
             </li>
@@ -357,7 +357,7 @@
                   height="56"
                   aria-label="company logo"
                 >
-                  <use href="/images/icons.svg#icon-customer-2"></use>
+                  <use href="./images/icons.svg#icon-customer-2"></use>
                 </svg>
               </a>
             </li>
@@ -369,7 +369,7 @@
                   height="56"
                   aria-label="company logo"
                 >
-                  <use href="/images/icons.svg#icon-customer-3"></use>
+                  <use href="./images/icons.svg#icon-customer-3"></use>
                 </svg>
               </a>
             </li>
@@ -381,7 +381,7 @@
                   height="56"
                   aria-label="company logo"
                 >
-                  <use href="/images/icons.svg#icon-customer-4"></use>
+                  <use href="./images/icons.svg#icon-customer-4"></use>
                 </svg>
               </a>
             </li>
@@ -393,7 +393,7 @@
                   height="56"
                   aria-label="company logo"
                 >
-                  <use href="/images/icons.svg#icon-customer-5"></use>
+                  <use href="./images/icons.svg#icon-customer-5"></use>
                 </svg>
               </a>
             </li>
@@ -405,7 +405,7 @@
                   height="56"
                   aria-label="company logo"
                 >
-                  <use href="/images/icons.svg#icon-customer-6"></use>
+                  <use href="./images/icons.svg#icon-customer-6"></use>
                 </svg>
               </a>
             </li>
