--- a/index.html
+++ b/index.html
@@ -178,28 +178,48 @@
                 <ul class="list social-links-wrapper">
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Instagram icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Instagram icon"
+                      >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Twitter icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Twitter icon"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Facebook icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Facebook icon"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Linkedin icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Linkedin icon"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -219,28 +239,48 @@
                 <ul class="list social-links-wrapper">
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Instagram icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Instagram icon"
+                      >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Twitter icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Twitter icon"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Facebook icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Facebook icon"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Linkedin icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Linkedin icon"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -260,28 +300,48 @@
                 <ul class="list social-links-wrapper">
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Instagram icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Instagram icon"
+                      >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Twitter icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Twitter icon"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Facebook icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Facebook icon"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Linkedin icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Linkedin icon"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -301,28 +361,48 @@
                 <ul class="list social-links-wrapper">
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Instagram icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Instagram icon"
+                      >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Twitter icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Twitter icon"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Facebook icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Facebook icon"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
-                      <svg width="16" height="16" aria-label="Linkedin icon">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="Linkedin icon"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -415,51 +495,69 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container">
-        <ul class="list footer-list">
-          <li class="footer-list-item">
-            <a href="./index.html" class="logo link">
-              Web<span class="footer-logo">Studio</span></a
-            >
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </li>
-          <li class="footer-list-item">
-            <h3 class="footer-header-text">Social media</h3>
-            <ul class="list footer-links-wrapper">
-              <li class="social-item">
-                <a class="social-link-footer" href="">
-                  <svg width="24" height="24" aria-label="Instagram icon">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-link-footer" href="">
-                  <svg width="24" height="24" aria-label="Twitter icon">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-link-footer" href="">
-                  <svg width="24" height="24" aria-label="Facebook icon">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-link-footer" href="">
-                  <svg width="24" height="24" aria-label="Linkedin icon">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+      <div class="container footer-container">
+        <div class="footer-item">
+          <a href="./index.html" class="logo link">
+            Web<span class="footer-logo">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-item">
+          <p class="footer-header-text">Social media</p>
+          <ul class="list footer-links-wrapper">
+            <li class="social-item">
+              <a class="social-link-footer" href="">
+                <svg
+                  class="social-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Instagram icon"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link-footer" href="">
+                <svg
+                  class="social-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Twitter icon"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link-footer" href="">
+                <svg
+                  class="social-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Facebook icon"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link-footer" href="">
+                <svg
+                  class="social-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Linkedin icon"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
 
