--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
 
           <ul class="list portfolio-cards">
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="link portfoloio-link" href="">
                 <div class="portfolio-overlay">
                   <img
                     src="./images/portfolio/app.jpg"
@@ -102,7 +102,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="link portfoloio-link" href="">
                 <div class="portfolio-overlay">
                   <img
                     src="./images/portfolio/qr.jpg"
@@ -123,7 +123,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="link portfoloio-link" href="">
                 <div class="portfolio-overlay">
                   <img
                     src="./images/portfolio/laptop.jpg"
@@ -144,7 +144,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="link portfoloio-link" href="">
                 <div class="portfolio-overlay">
                   <img
                     src="./images/portfolio/car.jpg"
@@ -165,7 +165,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="link portfoloio-link" href="">
                 <div class="portfolio-overlay">
                   <img
                     src="./images/portfolio/screensaver.jpg"
@@ -186,7 +186,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="link portfoloio-link" href="">
                 <div class="portfolio-overlay">
                   <img
                     src="./images/portfolio/user.jpg"
@@ -207,7 +207,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="link portfoloio-link" href="">
                 <div class="portfolio-overlay">
                   <img
                     src="./images/portfolio/layout.jpg"
@@ -228,7 +228,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="link portfoloio-link" href="">
                 <div class="portfolio-overlay">
                   <img
                     src="./images/portfolio/shopper.jpg"
@@ -249,7 +249,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="link portfoloio-link" href="">
                 <div class="portfolio-overlay">
                   <img
                     src="./images/portfolio/coffee.jpg"
@@ -275,51 +275,69 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container">
-        <ul class="list footer-list">
-          <li class="footer-list-item">
-            <a href="./index.html" class="logo link">
-              Web<span class="footer-logo">Studio</span></a
-            >
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </li>
-          <li class="footer-list-item">
-            <h3 class="footer-header-text">Social media</h3>
-            <ul class="list footer-links-wrapper">
-              <li class="social-item">
-                <a class="social-link-footer" href="">
-                  <svg width="24" height="24" aria-label="Instagram icon">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-link-footer" href="">
-                  <svg width="24" height="24" aria-label="Twitter icon">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-link-footer" href="">
-                  <svg width="24" height="24" aria-label="Facebook icon">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-link-footer" href="">
-                  <svg width="24" height="24" aria-label="Linkedin icon">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+      <div class="container footer-container">
+        <div class="footer-item">
+          <a href="./index.html" class="logo link">
+            Web<span class="footer-logo">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-item">
+          <p class="footer-header-text">Social media</p>
+          <ul class="list footer-links-wrapper">
+            <li class="social-item">
+              <a class="social-link-footer" href="">
+                <svg
+                  class="social-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Instagram icon"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link-footer" href="">
+                <svg
+                  class="social-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Twitter icon"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link-footer" href="">
+                <svg
+                  class="social-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Facebook icon"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link-footer" href="">
+                <svg
+                  class="social-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Linkedin icon"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
